2008-02-22  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invoker.c (invoker_init): Do not take a delay argument.
	Fix all callers. Move magic sending logic to ...
	(invoker_send_magic): ... here. New function.
	(main): Initialize magic_options depending on the delay variable.
	Call invoker_send_magic after invoker_init.

2008-02-22  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invoker.c (invoke_recv_ack): Use more descriptive names
	for the msg variable.
	(invoker_recv_pid): Likewise.
	(invoker_recv_exit): Likewise.
	* launcher/launcher.c (invoked_get_magic): Likewise.
	(invoked_get_args): Likewise.
	(invoked_get_prio): Likewise.
	(invoked_get_actions): Likewise.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (struct comm_msg): Move definition to ...
	* launcher/comm_msg.c: ... here.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (struct comm_msg): Add a size_max member.
	(comm_msg_new): Add a size_max argument.
	* launcher/comm_msg.c: Include <assert.h>.
	(comm_msg_new): Assert that size is <= size_max when size_max is
	in use. Initialize size_max.
	(comm_msg_destroy): Reset size_max.
	(comm_msg_grow): Check for size_max cap.
	* launcher/launcher.c (store_state): Initialize comm_msg cap to 0.
	* launcher/test_msg.c (main): Likewise. Add a test for a capped
	comm_msg.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_pid): Return status value from
	invoked_send_action.
	(invoked_send_exit): Likewise.
	(invoked_send_fake_exit): Return status value from invoked_send_exit.
	* launcher/comm_msg.c (comm_msg_pack_int): Return status value from
	comm_msg_pack_mem.
	(comm_msg_pack_str): Likewise.
	(comm_msg_unpack_int): Check return value from comm_msg_unpack_mem.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_action): New function.
	(invoked_send_pid): Use invoked_send_action instead of single