@@ -1,5 +1,12 @@
 2008-02-22  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/Makefile.am (check_PROGRAMS): Add 'test-msg-perf'.
+	(test_msg_perf_SOURCES): New variable.
+	(test_msg_perf_CPPFLAGS): Likewise.
+	* launcher/test_msg_perf.c: New file.
+
+2008-02-22  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/invoker.c (invoker_init): Do not take a delay argument.
 	Fix all callers. Move magic sending logic to ...
 	(invoker_send_magic): ... here. New function.
